{{$NEXT}}

0.45     2017-12-09

- Fix tests that fail with Params::ValidationCompiler 0.26 and require that
  version.


0.44     2016-12-05

- The changes to use Params::ValidationCompiler in 0.43 were not quite
  correct, and since Params::ValidationCompiler 0.20 started doing more
  validation of calls to validation_for(), this cause an exception. Reported
  by Todd Bruner. RT #119137.


0.43     2016-11-13

- Replaced MooseX::Params::Validate with Params::ValidationCompiler.


0.42     2016-07-04

- Require the latest version of DateTime::Format::Mail in order to avoid
  warnings from DateTime 1.32+ that will cause some tests to fail. Reported by
  Olaf Alders. RT #115868.


0.41     2016-03-05

- Fixed header folding for headers that contain non-true values like
  '0'. Based on a patch for Email::Simple from
  pali. https://github.com/rjbs/Email-Simple/pull/11.


0.40     2016-01-30

- Fixed the stringification of some headers with regards to encoding. The
  Received header should never be encoded (and thus should never contain
  non-ASCII).

- Fixed headers which contain email addresses (To, From, CC) so that email
  addresses are properly encoded (I think). The phrase and comment portions of
  the address can contain encoded-words, but the address itself should never
  be encoded. Note that per RFC6531 addresses may contain UTF-8, but the MTA
  must support the SMTPUTF8 extension in order for the mail to be
  delivered. As of this release, SMTPUTF8 support does not appear to be very
  widespread, so I would strongly discourage the use of UTF-8 in email
  addresses!


0.39     2015-08-04

- Changed Email::Abstract::Courriel's ->get_body() method to return the entire
  email as a string, making it equivalent to ->as_string(). This is confusing,
  but looking at the few instances of code in Email::Transport that call
  ->get_body(), it seems like that's what this method is expected to
  do. Reported by Greg Oschwald. RT #106176.


0.38     2015-08-04
