@@ -4,10 +4,12 @@ use warnings;
 use Test::Differences;
 use Test::Fatal;
 use Test::More 0.88;
+use Test::Warnings;
 
 use Courriel;
 use Courriel::Builder;
 use Courriel::Helpers;
+use Email::Address::XS;
 use Encode qw( encode is_utf8 );
 use Scalar::Util qw( blessed );
 
@@ -869,8 +871,12 @@ EOF
     my $email = build_email(
         subject('Test Subject'),
         from('autarch@urth.org'),
-        to( 'autarch@urth.org', Email::Address->parse('bob@example.com') ),
-        cc( 'jane@example.com', Email::Address->parse('joe@example.com') ),
+        to(
+            'autarch@urth.org', Email::Address::XS->parse('bob@example.com')
+        ),
+        cc(
+            'jane@example.com', Email::Address::XS->parse('joe@example.com')
+        ),
         header( 'X-Foo' => 42 ),
         header( 'X-Bar' => 84 ),
         plain_body('The body of the message')
