@@ -2,6 +2,7 @@ use strict;
 use warnings;
 
 use Test::More 0.88;
+use Test::Warnings;
 
 use Courriel::Header::ContentType;
 use Courriel::Headers;
