@@ -3,6 +3,7 @@ use warnings;
 
 use Test::Fatal;
 use Test::More 0.88;
+use Test::Warnings;
 
 use Test::Requires (
     'Path::Class' => '0',
