@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- Replaced all use of Email::Address with Email::Address::XS, as the former is
+  deprecated. The latter is a drop-in replacement API-wise, except if you are
+  checking `$address->isa('Email::Address')`. Reported by Greg Oschwald. GH
+  #5.
+
+
 0.45     2017-12-09
 
 - Fix tests that fail with Params::ValidationCompiler 0.26 and require that
